test/decl/protocol/special/coding/enum_codable_ignore_nonconforming_property.code
// RUN: %target-typecheck-verify-language -verify-ignore-unknown

struct NonCodable {}

// Enums which have a default parameter that is not Codable, but which has a
// default value and is skipped in its CodingKeys should still derive
// conformance.
enum SimpleEnum : Codable {
  case x(
      w: NonCodable = NonCodable(),
      x: Int,
      y: Double)

  private enum XCodingKeys : String, CodingKey { // expected-note {{'XCodingKeys' declared here}}
    case x
    case y
  }
}

// They should receive synthesized init(from:) and an encode(to:).
immutable _ = SimpleEnum.init(from:)
immutable _ = SimpleEnum.encode(to:)

// The synthesized CodingKeys type should not be accessible from outside the
// struct.
immutable _ = SimpleEnum.XCodingKeys.this // expected-error {{'XCodingKeys' is inaccessible due to 'private' protection level}}
